# pltr-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  README.md  RELEASE.md  llms.txt  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  test-publish.yml
benchmarks/palantir_expert/: cases.json  score.py
claude_skill/: SKILL.md
claude_skill/reference/: dependency-commands.md
docs/brainstorms/: 2026-07-17-foundry-dependency-analysis-requirements.md  2026-07-19-unified-proposal-lifecycle-requirements.md
docs/capabilities/: foundry-agent-capabilities.json
docs/features/: dataset-transactions.md
docs/foundry-internal-api/: README.md  application-layer.md  gates-and-mutations.md  graphql-gateway.md  ingestion-and-health.md  lineage-monocle-build2.md  platform-sweep.md  reverse-indexes.md
docs/plans/: 2026-07-17-001-feat-foundry-dependency-analysis-plan.md  2026-07-19-001-feat-agent-native-dependency-analysis-plan.md  2026-07-19-001-feat-unified-proposal-lifecycle-plan.md  2026-07-19-unified-proposal-lifecycle-capability-matrix.md  2026-07-20-001-feat-native-foundry-cli-parity-plan.md  2026-07-21-001-feat-dependency-internal-api-providers-plan.md  2026-07-22-foundry-full-surface-gap-analysis.md
docs/user-guide/: agent-skill.md  authentication.md  commands.md  troubleshooting.md  workflows.md
scripts/: check_skill_command_drift.py
skills/pltr-cli/: README.md  SKILL.md
src/pltr/: __main__.py  capabilities.py  cli.py
tests/: conftest.py  test_agent_envelope_contract.py  test_capabilities.py  test_capability_manifest_parity.py  test_palantir_expert_benchmark.py  test_phase3_contracts.py  test_skill_command_drift.py
tests/integration/: test_cli_integration.py
tests/test_auth/: test_oauth.py  test_token.py
tests/test_commands/: test_agent_manifest.py  test_capabilities.py  test_cli_contract.py  test_configure.py  test_connectivity.py  test_data_health.py  test_dataset.py  test_dependency.py  test_folder.py  test_language_models.py  test_lineage.py  test_namespace.py  test_notepad.py  test_ontology.py  test_project.py  test_proposal.py  test_search.py  test_widgets.py
tests/test_services/: test_compass.py  test_connectivity.py  test_data_health.py  (+23 more)
(+85 files in other folders)
