[project]
name = "pltr-cli"
version = "0.22.0"
description = "Command-line interface for Palantir Foundry APIs"
authors = [
    { name = "anjor", email = "anjor@umd.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.3,<8.4.0",
    "click-repl>=0.3.0",
    "foundry-platform-sdk>=1.95.0,<2.0.0",
    "keyring>=25.6.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "rich>=14.1.0",
    "typer>=0.18.0,<0.19.0",
]
keywords = [
    "palantir",
    "foundry",
    "cli",
    "api",
    "data",
    "ontology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/anjor/pltr-cli"
Repository = "https://github.com/anjor/pltr-cli"
Issues = "https://github.com/anjor/pltr-cli/issues"
Changelog = "https://github.com/anjor/pltr-cli/blob/main/CHANGELOG.md"
Documentation = "https://github.com/anjor/pltr-cli/blob/main/README.md"

[project.scripts]
pltr = "pltr.cli:main_entrypoint"

[project.optional-dependencies]
langfuse = [
    "langfuse>=4.0.0,<5.0.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/pltr",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.17.1",
    "pip-audit>=2.10.1",
    "pre-commit>=4.3.0",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
    "tomli-w>=1.2.0",
    "types-requests>=2.32.4.20250611",
]
